acertos de erros e inclusao de novos modelos
